--- a/portal/projects_all.html
+++ b/portal/projects_all.html
@@ -82,7 +82,7 @@
 
 		<!-- Footer -->
 			<section id="footer">
-                <img src="images/Untitled.mp4" style="width: 200px; height: 200px;">
+                <img src="portal/images/footer_logo.png" style="width: 200px; height: 200px;">
 				<ul class="copyright">
 					<li>&copy; Hashan 2024.</li>
 				</ul>
