changes to footer and css

--- a/portal/projects_all.html
+++ b/portal/projects_all.html
@@ -84,7 +84,7 @@
 
 		<!-- Footer -->
 			<section id="footer">
-                <img src="images/footer_logo.png"> # removed -> style="width: 200px; height: 200px;"
+                <img src="images/footer_logo.png" style="width: 200px; height: 200px;"> # removed -> none
 				<ul class="copyright">
 					<li>&copy; Hashan 2024.</li>
 				</ul>
