--- a/portal/projects_all.html
+++ b/portal/projects_all.html
@@ -83,7 +83,7 @@
 
 		<!-- Footer -->
 			<section id="footer">
-                <img src="images/footer_logo.png" style="width: 200px; height: 200px;"> 
+                <img src="images/footer_logo.png"> 
 				<ul class="copyright">
 					<li>&copy; Hashan 2024.</li>
 				</ul>
