--- a/portal/projects_all.html
+++ b/portal/projects_all.html
@@ -9,7 +9,7 @@
 		<title>HASHAN'S PORTFOLIO</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="shortcut icon" type="image/x-icon" href="images/logo.svg" />
+		<link rel="shortcut icon" type="image/x-icon" href="images/new_logo.svg" />
 		<link rel="stylesheet" href="assets/css/main.css?20230422" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
