--- a/portal/projects_all.html
+++ b/portal/projects_all.html
@@ -84,7 +84,7 @@
 			<section id="footer">
                 <img src="images/footer_logo.png"> 
 				<ul class="copyright">
-					<li>&copy; Chameera Hashan 2024</li>
+					<li>&copy; Chameera Athapattu 2024</li>
 				</ul>
 			</section>
 
